--- a/index.html
+++ b/index.html
@@ -20,33 +20,61 @@
 				<div class="search">
 					<input type="text" style="width:80%;margin-left:10%"/>
 				</div>
-				<div class="cart">
-					<button>Cart</button>
+				<div class="cart" >
+					<button style="font-size:16px;border-radius:5px">Cart</button>
 				</div>
 			</div>
             <div class="navigation_bar">
                  <div style="position:relative;top:10px">
                 <ul id="menuitems">
-            	  <li><a href="#">Home</a></li>
-            	  <li><a href="#">Home</a></li>
-            	  <li><a href="#">Home</a></li>
-            	  <li><a href="#">Home</a></li>
+									<li><a href="#">HOME</a></li>
+                 <li><a href="#">ELECTRONICS</a>
+                    <ul>
+											<li><a>Mobiles</a></li>
+											<li><a>Laptops</a></li>
+											<li><a>Cameras</a></li>
+										</ul>
+								 </li>
+            	  <li><a href="#">APPLIANCES</a>
+									<ul>
+										<li><a>Televisions</a></li>
+										<li><a>Washing Machines</a></li>
+										<li><a>Refrigarator</a></li>
+									</ul>
+
+								</li>
+
+            	  <li><a href="#">FERNITURE</a>
+									<ul>
+										<li><a>Bed</a></li>
+										<li><a>Sofa</a></li>
+										<li><a>Chairs</a></li>
+									</ul>
+								</li>
+            	  <li><a href="#">SPORTS</a>
+									<ul>
+										<li><a>Cricket</a></li>
+										<li><a>Badminton</a></li>
+										<li><a>Football</a></li>
+									</ul>
+								</li>
                </ul>
          </div>
-      
+
             </div>
             <div class="content_area">
             	<div class="leftside">
             		Left
             	</div>
             	<div class="rightside">
-            		Right
-            	</div>
+          <img src="http://dreamwebsoftech.com/img/ecom.jpg" style="overflow:hidden;height:100%;width:100%;"/>
+
+							</div>
             </div>
             <div class="footer">
             	Footer
             <div>
-      
+
 
 
 
