--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             Call Us: +91 8140476157   
           </h2>
         </div>
-        <button  id="cart" onclick="window.open('./checkout.html','_self')">
+        <button  id="cart" onclick="goToCart()">
           <i id="cart_logo" class="fa fa-shopping-cart" aria-hidden="true">
           </i>
           <div id = "countInCart">
@@ -40,37 +40,36 @@
             <a>Electronics</a>
             <i class="fa fa-caret-down" aria-hidden="true"></i>
             <ul>
-              <li id="mobiles" onClick=" clickOnItem('electronics','mobiles');"><a>Mobiles</a></li>
-              <li id="laptops" onClick=" clickOnItem('electronics','laptops');"><a>Laptops</a></li>
-              <li id="cameras" onClick=
-                " clickOnItem('electronics','cameras');"><a>Cameras</a></li>
+              <li id="mobiles" ><a class="filterable">Mobiles</a></li>
+              <li id="laptops" ><a  class="filterable">Laptops</a></li>
+              <li id="cameras" ><a class="filterable">Cameras</a></li>
             </ul>
           </li>
           <li>
             <a href="#">Appliances</a>
             <i class="fa fa-caret-down" aria-hidden="true"></i>
             <ul>
-              <li onClick=" clickOnItem('appliances','telivisons');"><a>Televisions</a></li>
-              <li onClick="clickOnItem('appliances','washing_machines');"><a>Washing Machines</a></li>
-              <li onClick="clickOnItem('appliances','refrigarators');"><a>Refrigarator</a></li>
+              <li><a  class="filterable">Televisions</a></li>
+              <li><a class="filterable">Washing Machines</a></li>
+              <li><a class="filterable">Refrigarator</a></li>
             </ul>
           </li>
           <li>
             <a href="#">Furniture</a>
             <i class="fa fa-caret-down" aria-hidden="true"></i>
             <ul>
-              <li onClick=" clickOnItem('fernitures','beds');"><a>Bed</a></li>
-              <li onClick=" clickOnItem('fernitures','sofas');"><a>Sofa</a></li>
-              <li  onClick=" clickOnItem('fernitures','chairs');"><a>Chairs</a></li>
+              <li><a  class="filterable">Bed</a></li>
+              <li><a  class="filterable">Sofa</a></li>
+              <li><a  class="filterable">Chairs</a></li>
             </ul>
           </li>
           <li>
             <a href="#">Sports</a>
             <i class="fa fa-caret-down" aria-hidden="true"></i>
             <ul>
-              <li><a>Cricket</a></li>
-              <li><a>Badminton</a></li>
-              <li><a>Football</a></li>
+              <li><a  class="filterable"> Cricket</a></li>
+              <li><a  class="filterable">Badminton</a></li>
+              <li><a  class="filterable">Football</a></li>
             </ul>
           </li>
         </ul>
@@ -78,13 +77,13 @@
         <i id="search_button" class="fa fa-search" aria-hidden="true"></i>
       </div>
       <div id="product_box">
-        <div class="single_product">
-          <div id="product_left">
-            <img src="./assets/items/electronics/mobiles/1.png"/>
+      <!--  <div class="single_product">
+          <div class="product_left">
+            <img class="product_image" src="./assets/items/electronics/mobiles/1.png"/>
             <br/>
             <button class="product_button"><i  class="fa fa-shopping-cart product_cart_logo"  aria-hidden="true"></i>ADD TO CART</button>
           </div>
-          <div id="product_right">
+          <div class="product_right">
             <ul>
               <li class="item_name">Samsung Galexy Note 8</li>
               <li class="item_price"><i class="fa fa-inr" aria-hidden="true"></i>10000</li>
@@ -104,13 +103,13 @@
             </ul>
           </div>
         </div>
-        <div class="single_product">
-          <div id="product_left">
-            <img src="./assets/items/electronics/mobiles/1.png"/>
+             <div class="single_product">
+          <div class="product_left">
+            <img class="product_image" src="./assets/items/electronics/laptops/1.png"/>
             <br/>
             <button class="product_button"><i  class="fa fa-shopping-cart product_cart_logo"  aria-hidden="true"></i>ADD TO CART</button>
           </div>
-          <div id="product_right">
+          <div class="product_right">
             <ul>
               <li class="item_name">Samsung Galexy Note 8</li>
               <li class="item_price"><i class="fa fa-inr" aria-hidden="true"></i>10000</li>
@@ -125,40 +124,12 @@
                   <b>Resolution Type:  </b> Quad HD<br>
                   <b>GPU:  </b> ARM Mali-T760 MP8<br>
                   <b>Display Type:  </b>Super AMOLED
-                  
-            </ul>
-            </p>
-            </li>
-            </ul>
-          </div>
-        </div>
-        <div class="single_product">
-          <div id="product_left">
-            <img src="./assets/items/electronics/mobiles/1.png"/>
-            <br/>
-            <button class="product_button"><i  class="fa fa-shopping-cart product_cart_logo"  aria-hidden="true"></i>ADD TO CART</button>
-          </div>
-          <div id="product_right">
-            <ul>
-              <li class="item_name">Samsung Galexy Note 8</li>
-              <li class="item_price"><i class="fa fa-inr" aria-hidden="true"></i>10000</li>
-              <li class="item_rating">4.2
-                <i class="fa fa-star" aria-hidden="true" ></i>
-              </li>
-              <hr style="color:burlywood;border:1px solid">
-              <li class="item_description">
-                <p>
-                  <b>Display Size:  </b> 5.7 inch</br>
-                  <b>Resolution:  </b> 2560 x 1440 Pixels</br>
-                  <b>Resolution Type:  </b> Quad HD<br>
-                  <b>GPU:  </b> ARM Mali-T760 MP8<br>
-                  <b>Display Type:  </b>Super AMOLED
-                 
                 </p>
               </li>
             </ul>
           </div>
-        </div>
+        </div>-->
+   
       </div>
       <div id="footer">
         <ul>
@@ -169,6 +140,6 @@
       </div>
     </div>
   </body>
-  <!-- <script type="text/javascript" src="js/app.js">
-    </script>-->
+<script type="text/javascript" src="js/app.js">
+    </script>
 </html>
