--- a/HomePage.html
+++ b/HomePage.html
@@ -7,17 +7,17 @@
     </title>
     <link rel="stylesheet" type="text/css" href="https://meyerweb.com/eric/tools/css/reset/reset.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="./css/checkout.css" />
+    <link rel="stylesheet" type="text/css" href="./css/homepage.css" />
   </head>
   <body>
     <div class="root">
-         <div class="header-wrapper">
+        <div class="header-wrapper">
       <header class="header" >
         <div class="logo" >
           <img class="logo__image" src="./assets/background/logo.jpg" alt="logo">
         </div>
-          <div class="label" >
-          <h1 align="bottom">
+        <div class="label" >
+          <h1 >
                  Go Shopping
              </h1>
             </div>
@@ -49,23 +49,19 @@
           <i class="fa fa-search" aria-hidden="true"></i>
         </div>
       </div>
+        
       <div class="filter-menu">
       </div>
         </div>
-             
       <div class="product-box">
-        <table class='cart-table'>
-        </table>
-        <div class="form-wrapper" >
-        </div>
       </div>
-        <div class="footer" >
+      <div class="footer" >
         <div class="mail-us">
           <b>  Mail Us:</b> dvijeshpatel9@gmail.com<br>
           <b>  Call Us:</b> +91 8140476157<br>
         </div>
         <div class="office-address">
-                Office Address: <br> 
+          Office Address: <br> 
            Go Shopping Private Limited,<br>
            Vaishnavi Summit, Ground Floor, 7th Main,<br>
            80 Feet Road, 3rd Block,<br>
@@ -76,5 +72,5 @@
       </div>
     </div>
   </body>
-  <script type="text/javascript" src="./js/checkout.js"></script>
+  <script type="module" src="js/homescript.js"></script>
 </html>
