--- a/HomePage.html
+++ b/HomePage.html
@@ -72,5 +72,16 @@
       </div>
     </div>
   </body>
-  <script type="module" src="js/homescript.js"></script>
+  <script type="text/javascript" src="js/categories/modelCategories.js"></script>
+     <script type="text/javascript" src="js/items/modelItems.js"></script>
+    <script type="text/javascript" src="js/navigation/modelNavigation.js"></script>
+    <script type="text/javascript" src="js/navigation/viewNavigation.js"></script>
+     <script type="text/javascript" src="js/navigation/navigationController.js"></script>
+    <script type="text/javascript" src="js/productBox/viewProductBox.js"></script>
+    <script type="text/javascript" src="js/productBox/modelProductBox.js"></script>
+     <script type="text/javascript" src="js/productBox/controllerProductBox.js"></script>
+    <script type="text/javascript" src="js/cart/modelCart.js"></script>
+    <script type="text/javascript" src="js/cart/viewCart.js"></script>
+    <script type="text/javascript" src="js/cart/cartController.js"></script>
+    <script type="text/javascript" src="js/homescript.js"></script>
 </html>
