--- a/checkout.html
+++ b/checkout.html
@@ -59,6 +59,7 @@
         <div class="form-wrapper" >
         </div>
       </div>
+        
         <div class="footer" >
         <div class="mail-us">
           <b>  Mail Us:</b> dvijeshpatel9@gmail.com<br>
@@ -76,5 +77,19 @@
       </div>
     </div>
   </body>
-  <script type="text/javascript" src="./js/checkout.js"></script>
+     <script type="text/javascript" src="js/navigation/modelNavigation.js"></script>
+    <script type="text/javascript" src="js/navigation/viewNavigation.js"></script>
+     <script type="text/javascript" src="js/navigation/navigationController.js"></script>
+   <script type="text/javascript" src="js/productBox/viewProductBox.js"></script>
+    <script type="text/javascript" src="js/productBox/modelProductBox.js"></script>
+     <script type="text/javascript" src="js/productBox/controllerProductBox.js"></script>
+      <script type="text/javascript" src="js/cart/modelCart.js"></script>
+    <script type="text/javascript" src="js/cart/viewCart.js"></script>
+    <script type="text/javascript" src="js/cart/cartController.js"></script>
+     <script type="text/javascript" src="./js/table/viewItemTable.js" ></script>
+    <script type="text/javascript" src="./js/table/modelItemTable.js" ></script>
+      <script type="text/javascript" src="./js/table/controllerItemTable.js" ></script>
+    <script type="text/javascript" src="./js/form/viewForm.js" ></script>
+    <script type="text/javascript" src="./js/form/formController.js" ></script>
+  <script type="text/javascript" src="./js/checkout.js" asyc></script>
 </html>
